// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewrite react-native to react-native-web export from "react-native": export from "react-native" 1`] = `
"
export { View } from 'react-native';
export { ColorPropType, StyleSheet, Text, createElement } from 'react-native';

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

exports.__esModule = true;
exports.createElement = exports.Text = exports.StyleSheet = exports.ColorPropType = exports.View = void 0;

var _View = _interopRequireDefault(require(\\"react-native-web/dist/exports/View\\"));

exports.View = _View.default;

var _ColorPropType = _interopRequireDefault(require(\\"react-native-web/dist/exports/ColorPropType\\"));

exports.ColorPropType = _ColorPropType.default;

var _StyleSheet = _interopRequireDefault(require(\\"react-native-web/dist/exports/StyleSheet\\"));

exports.StyleSheet = _StyleSheet.default;

var _Text = _interopRequireDefault(require(\\"react-native-web/dist/exports/Text\\"));

exports.Text = _Text.default;

var _createElement = _interopRequireDefault(require(\\"react-native-web/dist/exports/createElement\\"));

exports.createElement = _createElement.default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
"
`;

exports[`Rewrite react-native to react-native-web export from "react-native-web": export from "react-native-web" 1`] = `
"
export { View } from 'react-native-web';
export { ColorPropType, StyleSheet, Text, createElement } from 'react-native-web';

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

exports.__esModule = true;
exports.createElement = exports.Text = exports.StyleSheet = exports.ColorPropType = exports.View = void 0;

var _View = _interopRequireDefault(require(\\"react-native-web/dist/exports/View\\"));

exports.View = _View.default;

var _ColorPropType = _interopRequireDefault(require(\\"react-native-web/dist/exports/ColorPropType\\"));

exports.ColorPropType = _ColorPropType.default;

var _StyleSheet = _interopRequireDefault(require(\\"react-native-web/dist/exports/StyleSheet\\"));

exports.StyleSheet = _StyleSheet.default;

var _Text = _interopRequireDefault(require(\\"react-native-web/dist/exports/Text\\"));

exports.Text = _Text.default;

var _createElement = _interopRequireDefault(require(\\"react-native-web/dist/exports/createElement\\"));

exports.createElement = _createElement.default;

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
"
`;

exports[`Rewrite react-native to react-native-web import from "native-native": import from "native-native" 1`] = `
"
import ReactNative from 'react-native';
import { View } from 'react-native';
import { Invalid, View as MyView, ViewPropTypes } from 'react-native';
import * as ReactNativeModules from 'react-native';

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var ReactNativeModules = _interopRequireWildcard(require(\\"react-native-web/dist/index\\"));

var _View = _interopRequireDefault(require(\\"react-native-web/dist/exports/View\\"));

var _ViewPropTypes = _interopRequireDefault(require(\\"react-native-web/dist/exports/ViewPropTypes\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }
"
`;

exports[`Rewrite react-native to react-native-web import from "native-native": import from "native-native" 2`] = `
"
import ReactNative from 'react-native';
import { View } from 'react-native';
import { Invalid, View as MyView, ViewPropTypes } from 'react-native';
import * as ReactNativeModules from 'react-native';

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var ReactNativeModules = _interopRequireWildcard(require(\\"react-native-web/dist/cjs/index\\"));

var _View = _interopRequireDefault(require(\\"react-native-web/dist/cjs/exports/View\\"));

var _ViewPropTypes = _interopRequireDefault(require(\\"react-native-web/dist/cjs/exports/ViewPropTypes\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }
"
`;

exports[`Rewrite react-native to react-native-web import from "react-native-web": import from "react-native-web" 1`] = `
"
import { createElement } from 'react-native-web';
import { ColorPropType, StyleSheet, View, TouchableOpacity, processColor } from 'react-native-web';
import * as ReactNativeModules from 'react-native-web';

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _createElement = _interopRequireDefault(require(\\"react-native-web/dist/exports/createElement\\"));

var _ColorPropType = _interopRequireDefault(require(\\"react-native-web/dist/exports/ColorPropType\\"));

var _StyleSheet = _interopRequireDefault(require(\\"react-native-web/dist/exports/StyleSheet\\"));

var _View = _interopRequireDefault(require(\\"react-native-web/dist/exports/View\\"));

var _TouchableOpacity = _interopRequireDefault(require(\\"react-native-web/dist/exports/TouchableOpacity\\"));

var _processColor = _interopRequireDefault(require(\\"react-native-web/dist/exports/processColor\\"));

var ReactNativeModules = _interopRequireWildcard(require(\\"react-native-web/dist/index\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
"
`;

exports[`Rewrite react-native to react-native-web require "react-native": require "react-native" 1`] = `
"
const ReactNative = require('react-native');
const { View } = require('react-native');
const { StyleSheet, TouchableOpacity } = require('react-native');

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var ReactNative = require(\\"react-native-web/dist/index\\").default;

var View = require(\\"react-native-web/dist/exports/View\\").default;

var StyleSheet = require(\\"react-native-web/dist/exports/StyleSheet\\").default;

var TouchableOpacity = require(\\"react-native-web/dist/exports/TouchableOpacity\\").default;
"
`;

exports[`Rewrite react-native to react-native-web require "react-native": require "react-native" 2`] = `
"
const ReactNative = require('react-native');
const { View } = require('react-native');
const { StyleSheet, TouchableOpacity } = require('react-native');

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var ReactNative = require(\\"react-native-web/dist/cjs/index\\").default;

var View = require(\\"react-native-web/dist/cjs/exports/View\\").default;

var StyleSheet = require(\\"react-native-web/dist/cjs/exports/StyleSheet\\").default;

var TouchableOpacity = require(\\"react-native-web/dist/cjs/exports/TouchableOpacity\\").default;
"
`;

exports[`Rewrite react-native to react-native-web require "react-native-web": require "react-native-web" 1`] = `
"
const ReactNative = require('react-native-web');
const { createElement } = require('react-native-web');
const { ColorPropType, StyleSheet, View, TouchableOpacity, processColor } = require('react-native-web');

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var ReactNative = require(\\"react-native-web/dist/index\\").default;

var createElement = require(\\"react-native-web/dist/exports/createElement\\").default;

var ColorPropType = require(\\"react-native-web/dist/exports/ColorPropType\\").default;

var StyleSheet = require(\\"react-native-web/dist/exports/StyleSheet\\").default;

var View = require(\\"react-native-web/dist/exports/View\\").default;

var TouchableOpacity = require(\\"react-native-web/dist/exports/TouchableOpacity\\").default;

var processColor = require(\\"react-native-web/dist/exports/processColor\\").default;
"
`;
